--- a/src/app/pages/main/dashboard/dashboard.component.html
+++ b/src/app/pages/main/dashboard/dashboard.component.html
@@ -22,84 +22,170 @@
             </button>
         </ng-template>
 
-    <div class="grid">
-        <div class="col-12 md:col-6 lg:col-3">
-            <div class="surface-card shadow-2 p-3 border-round">
-                <div class="flex justify-content-between">
-                    <div>
-                        <span class="block text-500 font-medium mb-3">Activated Devices</span>
-                        <div class="text-green-500 text-2xl">210</div>
+        <div class="grid">
+            <div class="col-12 md:col-6 lg:col-3">
+                <div class="surface-card shadow-2 p-3 border-round">
+                    <div class="flex justify-content-between">
+                        <div>
+                            <span class="block text-500 font-medium mb-3">Activated Devices</span>
+                            <div class="text-green-500 text-2xl">210</div>
+                        </div>
+                        <div class="flex align-items-center justify-content-center bg-green-100 border-round"
+                            style="width:2.5rem;height:2.5rem">
+                            <i class="pi pi-car text-green-500 text-xl"></i>
+                        </div>
                     </div>
-                    <div class="flex align-items-center justify-content-center bg-green-100 border-round"
-                        style="width:2.5rem;height:2.5rem">
-                        <i class="pi pi-car text-green-500 text-xl"></i>
+                </div>
+            </div>
+            <div class="col-12 md:col-6 lg:col-3">
+                <div class="surface-card shadow-2 p-3 border-round">
+                    <div class="flex justify-content-between">
+                        <div>
+                            <span class="block text-500 font-medium mb-3">Pending Activation</span>
+                            <div class="text-orange-500 text-2xl">284</div>
+                        </div>
+                        <div class="flex align-items-center justify-content-center bg-orange-100 border-round"
+                            style="width:2.5rem;height:2.5rem">
+                            <i class="pi pi-car text-orange-500 text-xl"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 md:col-6 lg:col-3">
+                <div class="surface-card shadow-2 p-3 border-round">
+                    <div class="flex justify-content-between">
+                        <div>
+                            <span class="block text-500 font-medium mb-3">Offline devices</span>
+                            <div class="text-red-500 text-2xl">12</div>
+                        </div>
+                        <div class="flex align-items-center justify-content-center bg-red-100 border-round"
+                            style="width:2.5rem;height:2.5rem">
+                            <i class="pi pi-car text-red-500 text-xl"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 md:col-6 lg:col-3">
+                <div class="surface-card shadow-2 p-3 border-round">
+                    <div class="flex justify-content-between">
+                        <div>
+                            <span class="block text-500 font-medium mb-3">Online Devies</span>
+                            <div class="text-blue-500 text-2xl">152</div>
+                        </div>
+                        <div class="flex align-items-center justify-content-center bg-blue-100 border-round"
+                            style="width:2.5rem;height:2.5rem">
+                            <i class="pi pi-car text-blue-500 text-xl"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 md:col-6 lg:col-3">
+                <div class="surface-card shadow-2 p-3 border-round">
+                    <div class="flex justify-content-between">
+                        <div>
+                            <span class="block text-500 font-medium mb-3">Total devices</span>
+                            <div class="text-gray-500 text-2xl">152</div>
+                        </div>
+                        <div class="flex align-items-center justify-content-center bg-gray-100 border-round"
+                            style="width:2.5rem;height:2.5rem">
+                            <i class="pi pi-car text-gray-500 text-xl"></i>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-12 md:col-6 lg:col-3">
-            <div class="surface-card shadow-2 p-3 border-round">
-                <div class="flex justify-content-between">
-                    <div>
-                        <span class="block text-500 font-medium mb-3">Pending Activation</span>
-                        <div class="text-orange-500 text-2xl">284</div>
-                    </div>
-                    <div class="flex align-items-center justify-content-center bg-orange-100 border-round"
-                        style="width:2.5rem;height:2.5rem">
-                        <i class="pi pi-car text-orange-500 text-xl"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 md:col-6 lg:col-3">
-            <div class="surface-card shadow-2 p-3 border-round">
-                <div class="flex justify-content-between">
-                    <div>
-                        <span class="block text-500 font-medium mb-3">Offline devices</span>
-                        <div class="text-red-500 text-2xl">12</div>
-                    </div>
-                    <div class="flex align-items-center justify-content-center bg-red-100 border-round"
-                        style="width:2.5rem;height:2.5rem">
-                        <i class="pi pi-car text-red-500 text-xl"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 md:col-6 lg:col-3">
-            <div class="surface-card shadow-2 p-3 border-round">
-                <div class="flex justify-content-between">
-                    <div>
-                        <span class="block text-500 font-medium mb-3">Online Devies</span>
-                        <div class="text-blue-500 text-2xl">152</div>
-                    </div>
-                    <div class="flex align-items-center justify-content-center bg-blue-100 border-round"
-                        style="width:2.5rem;height:2.5rem">
-                        <i class="pi pi-car text-blue-500 text-xl"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 md:col-6 lg:col-3">
-            <div class="surface-card shadow-2 p-3 border-round">
-                <div class="flex justify-content-between">
-                    <div>
-                        <span class="block text-500 font-medium mb-3">Total devices</span>
-                        <div class="text-gray-500 text-2xl">152</div>
-                    </div>
-                    <div class="flex align-items-center justify-content-center bg-gray-100 border-round"
-                        style="width:2.5rem;height:2.5rem">
-                        <i class="pi pi-car text-gray-500 text-xl"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    
-</p-panel>
+
+    </p-panel>
+
+    <p-divider/>
 
 
+    <p-panel [toggleable]="true" header="Hierarchy Summary">
+        <ng-template pTemplate="header">
+            <div class="flex align-items-center gap-2 mr-3">
+                <i class="pi pi-users text-primary text-3xl"></i>
+            </div>
+        </ng-template>
+        <ng-template pTemplate="footer">
+            <div class="flex flex-wrap align-items-center justify-content-between gap-3">
+                <div class="flex align-items-center gap-2">
+                    <!-- <p-button icon="pi pi-user" rounded="true" text="true" />
+                    <p-button icon="pi pi-bookmark" severity="secondary" rounded="true" text="true" /> -->
+                </div>
+                <span class="p-text-secondary">
+                    Updated 2 hours ago
+                </span>
+            </div>
+        </ng-template>
+        <ng-template pTemplate="icons">
+            <button class="p-panel-header-icon p-link mr-2">
+                <span class="pi pi-refresh"></span>
+            </button>
+        </ng-template>
 
-    <p-divider />
+        <div class="grid">
+            <div class="col-12 md:col-6 lg:col-3">
+                <div class="surface-card shadow-2 p-3 border-round">
+                    <div class="flex justify-content-between">
+                        <div>
+                            <span class="block text-500 font-medium mb-3">Total OEM</span>
+                            <div class="text-green-500 text-2xl">210</div>
+                        </div>
+                        <div class="flex align-items-center justify-content-center bg-green-100 border-round"
+                            style="width:2.5rem;height:2.5rem">
+                            <i class="pi pi-car text-green-500 text-xl"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 md:col-6 lg:col-3">
+                <div class="surface-card shadow-2 p-3 border-round">
+                    <div class="flex justify-content-between">
+                        <div>
+                            <span class="block text-500 font-medium mb-3">Total Distributor</span>
+                            <div class="text-orange-500 text-2xl">284</div>
+                        </div>
+                        <div class="flex align-items-center justify-content-center bg-orange-100 border-round"
+                            style="width:2.5rem;height:2.5rem">
+                            <i class="pi pi-car text-orange-500 text-xl"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 md:col-6 lg:col-3">
+                <div class="surface-card shadow-2 p-3 border-round">
+                    <div class="flex justify-content-between">
+                        <div>
+                            <span class="block text-500 font-medium mb-3">Total Delaer</span>
+                            <div class="text-red-500 text-2xl">12</div>
+                        </div>
+                        <div class="flex align-items-center justify-content-center bg-red-100 border-round"
+                            style="width:2.5rem;height:2.5rem">
+                            <i class="pi pi-car text-red-500 text-xl"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 md:col-6 lg:col-3">
+                <div class="surface-card shadow-2 p-3 border-round">
+                    <div class="flex justify-content-between">
+                        <div>
+                            <span class="block text-500 font-medium mb-3">Total User</span>
+                            <div class="text-blue-500 text-2xl">152</div>
+                        </div>
+                        <div class="flex align-items-center justify-content-center bg-blue-100 border-round"
+                            style="width:2.5rem;height:2.5rem">
+                            <i class="pi pi-car text-blue-500 text-xl"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </p-panel>
+
+
+    <p-divider/>
 
 
     <div class="grid">
@@ -115,7 +201,7 @@
             <div class="surface-card shadow-2 p-3 border-round">
                 <div class="flex flex-column justify-content-between">
                     <div class="flex justify-content-between mb-3">
-                            <p-chart [responsive]="true" class="w-full" height="400px" type="doughnut" [data]="data"
+                        <p-chart [responsive]="true" class="w-full" height="400px" type="doughnut" [data]="data"
                             [options]="options" />
                     </div>
                 </div>
