--- a/src/app/pages/main/settings/settings.component.html
+++ b/src/app/pages/main/settings/settings.component.html
@@ -1,3 +1,37 @@
 <div class="surface-ground px-4 py-5 md:px-6 lg:px-8">
-    <p>Settings</p>
+    <div pRipple class="relative overflow-hidden w-full p-link flex align-items-center p-2 text-color border-noround mb-5">
+        <p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" class="mr-2" shape="circle" />
+        <span class="inline-flex flex-column">
+            <span class="font-bold">{{ 'Abhishek Gupta' }}</span>
+            <span class="text-sm">{{ 'Admin' }}</span>
+        </span>
+    </div>
+
+    <div class="grid grid-nogutter">
+        <!-- Sidebar Column -->
+        <div class="col-12 md:col-3 lg:col-2">
+            <p-panelMenu [model]="items" styleClass="w-full">
+                <ng-template pTemplate="item" let-item>
+                    <a pRipple class="flex align-items-center px-3 py-2 cursor-pointer">
+                        <i [class]="item.icon + ' text-primary'"></i>
+                        <span class="ml-2">{{ item.label }}</span>
+                        @if(item.items) {
+                            <i class="pi pi-angle-down text-primary ml-auto"></i>
+                        }
+                    </a>
+                </ng-template>
+            </p-panelMenu>
+        </div>
+    
+        <!-- Divider Column -->
+        <div class="col-hidden md:col-1 lg:col-1" [ngClass]="{'w-full': isSmallScreen}">
+            <p-divider [layout]="isSmallScreen ? 'horizontal' : 'vertical'"></p-divider>
+        </div>
+    
+        <!-- Main Content Column -->
+        <div class="col-12 md:col-8 lg:col-9">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+    
 </div>
