--- a/src/app/pages/main/dashboard/dashboard.component.html
+++ b/src/app/pages/main/dashboard/dashboard.component.html
@@ -18,7 +18,7 @@
         </ng-template>
         <ng-template pTemplate="icons">
             <button class="p-panel-header-icon p-link mr-2">
-                <span class="pi pi-refresh"></span>
+                <span class="pi pi-sync"></span>
             </button>
         </ng-template>
 
@@ -119,7 +119,7 @@
         </ng-template>
         <ng-template pTemplate="icons">
             <button class="p-panel-header-icon p-link mr-2">
-                <span class="pi pi-refresh"></span>
+                <span class="pi pi-sync"></span>
             </button>
         </ng-template>
 
