--- a/src/app/pages/main/settings/privacy/reset-password/reset-password.component.html
+++ b/src/app/pages/main/settings/privacy/reset-password/reset-password.component.html
@@ -1,11 +1,11 @@
-<p-card subheader="Update Your Password" [style]="{ maxWidth: '100%', width: '450px' }">
+<!-- <p-card subheader="Update Your Password" [style]="{ maxWidth: '100%', width: '450px' }" styleClass="shadow-2">
     <ng-template pTemplate="content">
      <div class="grid formgrid">
          <div class="col-12 py-2 sm:col-4">
              <label for="oldPassword" class="w-full sm:w-8rem">Old Password</label>
          </div>
          <div class="col-12 sm:col-8">
-             <input pInputText id="oldPassword" class="w-full" autocomplete="off" />
+             <input pInputText id="oldPassword" placeholder="Enter Old Password" class="w-full" [(ngModel)]="resetPasswordObj.oldPassword" autocomplete="off" />
          </div>
      </div>
      <div class="grid formgrid mt-3">
@@ -13,14 +13,53 @@
              <label for="newPassword" class="w-full sm:w-8rem">New Password</label>
          </div>
          <div class="col-12 sm:col-8">
-             <input pInputText id="newPassword" class="w-full" autocomplete="off" />
+             <input pInputText id="newPassword" placeholder="Enter New Password" class="w-full" [(ngModel)]="resetPasswordObj.newPassword" autocomplete="off" />
          </div>
      </div>
     </ng-template>
      <ng-template pTemplate="footer">
          <div class="flex gap-3 mt-4">
-             <p-button label="Save" class="w-full" />
+             <p-button icon="pi pi-wrench" [outlined]="true" [loading]="isLoading" (onClick)="reset()" label="Reset" class="w-full" />
          </div>
      </ng-template>
  </p-card>
- 
+  -->
+
+
+
+
+
+  
+
+<p-panel [toggleable]="true" header="Reset Password">
+    <ng-template pTemplate="header">
+        <div class="flex align-items-center gap-2 mr-3">
+            <i class="pi pi-wrench text-primary text-3xl"></i>
+        </div>
+    </ng-template>
+    <ng-template pTemplate="content">
+        <div class="grid formgrid">
+            <div class="col-12 py-2 sm:col-4 py-2">
+                <label for="oldPassword" class="w-full sm:w-auto">Old Password</label>
+                <input pInputText id="oldPassword" placeholder="Enter Old Password" class="w-full mt-2" [(ngModel)]="resetPasswordObj.oldPassword" autocomplete="off" />
+            </div>
+            <div class="col-12 py-2 sm:col-4">
+                <label for="newPassword" class="w-full sm:w-auto">New Password</label>
+                <input pInputText id="newPassword" placeholder="Enter New Password" class="w-full mt-2" [(ngModel)]="resetPasswordObj.newPassword" autocomplete="off" />
+            </div>
+        </div>
+       </ng-template>
+
+    <ng-template pTemplate="footer">
+        <div class="flex flex-wrap align-items-center justify-content-between gap-3">
+            <div class="flex align-items-center gap-2">
+                <!-- <p-button icon="pi pi-user" rounded="true" text="true" />
+                <p-button icon="pi pi-bookmark" severity="secondary" rounded="true" text="true" /> -->
+            </div>
+            <p-button icon="pi pi-wrench" [outlined]="true" [loading]="isLoading" (onClick)="reset()" label="Reset" />
+
+
+        </div>
+    </ng-template>
+</p-panel>
+  
