--- a/src/app/pages/main/settings/profile/update-profile/update-profile.component.html
+++ b/src/app/pages/main/settings/profile/update-profile/update-profile.component.html
@@ -18,8 +18,8 @@
           <input pInputText id="loginId" placeholder="Enter Login Id" class="w-full mt-2" [(ngModel)]="profileObject.loginId" autocomplete="off" />
         </div>
         <div class="col-12 sm:col-4 py-2">
-          <label for="contactPersonName" class="w-full sm:w-auto">Contact Person Name</label>
-          <input pInputText id="contactPersonName" placeholder="Enter Contact Person Name" class="w-full mt-2" [(ngModel)]="profileObject.contactPersonName" autocomplete="off" />
+          <label for="contactPersonName" class="w-full sm:w-auto">Contact Name</label>
+          <input pInputText id="contactPersonName" placeholder="Enter Contact Name" class="w-full mt-2" [(ngModel)]="profileObject.contactPersonName" autocomplete="off" />
         </div>
       </div>
   
