--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
 
-<p-toast [life]="2000" [breakpoints]="{ '920px': { width: '100%', right: '0', left: '0' } }"/>
+<p-toast [life]="2000" [breakpoints]="{
+    '920px': { width: '50%' },
+    '768px': { width: '60%' },
+    '640px': { width: '70%' }, 
+    '568px': { width: '80%' },
+    '480px': { width: '90%' },
+    '414px': { width: '80%' },
+    '375px': { width: '80%' },
+    '320px': { width: '80%' } 
+    }"
+/>
 
 <router-outlet></router-outlet>
