--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import "primeicons/primeicons.css";
 @import "primeflex/primeflex.css";
 @import 'leaflet/dist/leaflet.css';
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 .p-shake {
     animation: p-shake 0.5s;
