--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -8,7 +8,7 @@
                 <span class="text-primary" [class]="item.icon"></span>
                 <span class="ml-2 text-color-secondary">{{ item.label }}</span>
                 @if(item.items) {
-                    <i [ngClass]="['pi', root ? 'pi-angle-down ml-2' : 'pi-angle-right ml-auto']"></i>
+                <i [ngClass]="['pi', root ? 'pi-angle-down ml-2' : 'pi-angle-right ml-auto']"></i>
                 }
             </a>
         </ng-template>
@@ -20,8 +20,10 @@
                             <img src="assets/images/logo.png" alt="logo" height="60" width="60"     />
                             <span class="font-medium text-xl font-semibold">VAHAN<span class="text-primary">SATHI</span></span>
                         </span> -->
-                        <button pRipple class="relative overflow-hidden w-full p-link flex align-items-center p-2 pl-3 text-color hover:surface-200 border-noround">
-                            <p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" class="mr-2" shape="circle" />
+                        <button pRipple
+                            class="relative overflow-hidden w-full p-link flex align-items-center p-2 pl-3 text-color hover:surface-200 border-noround">
+                            <p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png"
+                                class="mr-2" shape="circle" />
                             <span class="inline-flex flex-column">
                                 <span class="font-bold">{{ userName }}</span>
                                 <span class="text-sm">{{ userRole }}</span>
@@ -49,9 +51,11 @@
                         </button> -->
                     </ng-template>
                 </p-menu>
-                <i pBadge style="font-size: 1.3rem" class="mr-3 pi pi-bell p-shake text-orange-500" severity="danger"></i>
+                <i pBadge style="font-size: 1.3rem" class="mr-3 pi pi-bell p-shake text-orange-500"
+                    severity="danger"></i>
                 <!-- <p-button pBadge value="2" icon="pi pi-bell" [rounded]="true" [text]="true" severity="warning" /> -->
-                <p-button class="mr-3" [text]="true" (onClick)="menu.toggle($event)" icon="pi pi-user" [rounded]="true" severity="primary" />
+                <p-button class="mr-3" [text]="true" (onClick)="menu.toggle($event)" icon="pi pi-user" [rounded]="true"
+                    severity="primary" />
             </div>
         </ng-template>
     </p-menubar>
@@ -59,11 +63,7 @@
 
 
     <div class="px-4 py-4 md:px-6 lg:px-8">
-        <p-breadcrumb 
-        styleClass="border-none"
-            class="max-w-full" 
-            [model]="breadCrumbs" 
-            [home]="home" />
+        <p-breadcrumb styleClass="border-none" class="max-w-full" [model]="breadCrumbs" [home]="home" />
     </div>
 </div>
 
