--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="flex align-items-center h-screen justify-content-center">
+<div class="flex align-items-center min-h-screen justify-content-center">
     <div class="surface-card p-4 shadow-2 border-round w-full md:w-8 lg:w-4 xl:w-3">
         <div class="text-center mb-5">
             <span class="inline-flex align-items-center gap-1 px-2 py-2">
