--- a/src/app/pages/main/management/dynamic-user/dynamic-user.component.html
+++ b/src/app/pages/main/management/dynamic-user/dynamic-user.component.html
@@ -1,5 +1,5 @@
-<div class="px-4 md:px-6 lg:px-8">
-    <p-toolbar styleClass="mb-4 gap-2">
+<!-- <div> -->
+    <!-- <p-toolbar styleClass="mb-4 gap-2">
         <ng-template pTemplate="left">
             <p-button severity="success" label="New" icon="pi pi-plus" class="mr-2" (onClick)="openNew()" />
             <p-button severity="danger" label="Delete" icon="pi pi-trash" (onClick)="deleteSelectedProducts()"
@@ -7,16 +7,15 @@
         </ng-template>
 
         <ng-template pTemplate="right">
-            <!-- <p-fileUpload mode="basic" accept="image/*" [maxFileSize]="1000000" label="Import" chooseLabel="Import"
-                class="mr-2 inline-block" /> -->
+            
             <p-button severity="help" label="Export" icon="pi pi-upload" />
         </ng-template>
-    </p-toolbar>
+    </p-toolbar> -->
 
-    <app-generic-table [data]="users" [columns]="columns" [rows]="5" [header]="userType"
+    <app-generic-table [data]="users" [columns]="columns" [rows]="10" [header]="userType"
         [globalFilterFields]="['orgName','name','email','loginId']" (edit)="onEditProduct($event)"
-        (delete)="onDeleteProduct($event)" (selectionChange)="onSelectionChange($event)"/>
-</div>
+        (delete)="onDeleteProduct($event)" (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" />
+<!-- </div> -->
 
 
 <app-generic-dialog [isValidated]="isValidated" [visible]="userDialog" [header]="userType" [width]="'800px'" [modal]="true" [isEditing]="isEditing"
