--- a/src/app/pages/main/settings/privacy/reset-password/reset-password.component.html
+++ b/src/app/pages/main/settings/privacy/reset-password/reset-password.component.html
@@ -47,6 +47,10 @@
                 <label for="newPassword" class="w-full sm:w-auto">New Password</label>
                 <input pInputText id="newPassword" placeholder="Enter New Password" class="w-full mt-2" [(ngModel)]="resetPasswordObj.newPassword" autocomplete="off" />
             </div>
+            <div class="col-12 py-2 sm:col-4">
+                <label for="confirmPassword" class="w-full sm:w-auto">Confirm Password</label>
+                <input pInputText id="newPassword" placeholder="Re-enter Password" class="w-full mt-2" [(ngModel)]="confirmNewPassword" autocomplete="off" />
+            </div>
         </div>
        </ng-template>
 
@@ -56,7 +60,7 @@
                 <!-- <p-button icon="pi pi-user" rounded="true" text="true" />
                 <p-button icon="pi pi-bookmark" severity="secondary" rounded="true" text="true" /> -->
             </div>
-            <p-button icon="pi pi-wrench" [outlined]="true" [loading]="isLoading" (onClick)="reset()" label="Reset" />
+            <p-button [disabled]="!(isValid())" icon="pi pi-wrench" [outlined]="true" [loading]="isLoading" (onClick)="reset()" label="Reset" />
 
 
         </div>
