--- a/src/app/shared/components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/generic-table/generic-table.component.html
@@ -1,17 +1,31 @@
+
+<div class="px-4 md:px-6 lg:px-8">
+    <p-toolbar styleClass="bg-primary-reverse border-bottom-none border-noround">
+        <div class="p-toolbar-group-start">
+            <p-button [text]="true" [outlined]="true" icon="pi pi-plus" class="mr-2" (onClick)="onNewUser()"/>
+            <p-button [text]="true" [outlined]="true" icon="pi pi-print"/>
+        </div>
+        <div class="p-toolbar-group-center">
+            <span class="p-input-icon-left">
+                <i class="pi pi-search"></i>
+                <input pInputText placeholder="Search" />
+            </span>
+        </div>
+        <div class="p-toolbar-group-end">
+            <p-button label="Save" icon="pi pi-check" />
+        </div>
+    </p-toolbar>
+
+
+
 <p-table #dt [value]="data" [rows]="rows" [paginator]="true" [globalFilterFields]="globalFilterFields"
      [(selection)]="selection" [rowHover]="true" [scrollable]="true"
     currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true"
-    (selectionChange)="onSelectionChange($event)"  [rowsPerPageOptions]="[5, 10, 25, 50]">
-    <!-- Caption -->
-    <ng-template pTemplate="caption">
-        <div class="flex align-items-center justify-content-between">
-            <h5 class="m-0">{{ header + ' Details' }}</h5>
-            <span class="p-input-icon-left">
-                <i class="pi pi-search"></i>
-                <input pInputText type="text" placeholder="Search..." />
-            </span>
-        </div>
-    </ng-template>
+    (selectionChange)="onSelectionChange($event)"  [rowsPerPageOptions]="[10, 25, 50]" styleClass="p-datatable-sm p-datatable-gridlines"
+    [scrollable]="true" 
+    scrollHeight="400px" 
+    [virtualScroll]="true"
+    [virtualScrollItemSize]="46">
 
     <!-- Dynamic Columns -->
     <ng-template pTemplate="header">
@@ -19,7 +33,7 @@
             <th pFrozenColumn style="width: 4rem"><p-tableHeaderCheckbox></p-tableHeaderCheckbox></th>
             @for (col of columns; track $index) {
                 @if (col.field === 'orgName' || col.field === 'name') {
-                    <th pFrozenColumn pSortableColumn="{{ col.field }}"
+                    <th pSortableColumn="{{ col.field }}"
                         [style.minWidth]="col.minWidth || '15rem'">
                         {{ col.header }} <p-sortIcon field="{{ col.field }}"></p-sortIcon>
                     </th>
@@ -30,7 +44,7 @@
                     </th>
                 }
             }
-            <th>Actions</th>
+            <th pFrozenColumn alignFrozen="right" [frozen]="true">Actions</th>
         </tr>
     </ng-template>
 
@@ -39,7 +53,7 @@
             <td pFrozenColumn><p-tableCheckbox [value]="item"></p-tableCheckbox></td>
             @for (col of columns; track $index) {
                 @if (col.field === 'orgName' || col.field === 'name') {
-                    <td pFrozenColumn>{{ item[col.field] || '-' }}</td>
+                    <td>{{ item[col.field] || '-' }}</td>
                 } @else {
                     @if(col.field === 'active'){
                         <td><p-tag [severity]="item[col.field] ? 'success' : 'danger'" [value]="item[col.field] ? 'Active' : 'InActive'"/></td>
@@ -48,9 +62,10 @@
                     }
                 }
             }
-            <td style="min-width: 140px;">
-                <p-button icon="pi pi-pencil" class="mr-2" [rounded]="true" [outlined]="true" severity="primary"
-                    (onClick)="onEdit(item)"></p-button>
+            <td pFrozenColumn alignFrozen="right" [frozen]="true" style="min-width: 140px;">
+                <i (click)="onEdit(item)" class="pi pi-pencil ml-2 text-sm hover:text-primary cursor-pointer"></i>
+                <!-- <p-button icon="pi pi-pencil" class="mr-2 text-sm" [rounded]="true" [outlined]="true" severity="primary"
+                    (onClick)="onEdit(item)"></p-button> -->
                 <!-- <p-button icon="pi pi-trash" severity="danger" [rounded]="true" [outlined]="true"
                     (onClick)="onDelete(item)"></p-button> -->
             </td>
@@ -64,3 +79,6 @@
         </div>
     </ng-template>
 </p-table>
+
+
+</div>
