--- a/src/app/shared/components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/generic-table/generic-table.component.html
@@ -67,7 +67,7 @@
                     @if(isDataLoading) {
                         <p-progressSpinner ariaLabel="loading" styleClass="w-3rem h-3rem" />
                     } @else {
-                        No Data
+                        No Data Found.
                     }
                 </td>
             </tr>
