--- a/src/app/pages/main/management/device/device-list/device-list.component.html
+++ b/src/app/pages/main/management/device/device-list/device-list.component.html
@@ -1,5 +1,5 @@
-<div class="px-4 md:px-6 lg:px-8">
-    <p-toolbar styleClass="mb-4 gap-2">
+<!-- <div class="px-4 md:px-6 lg:px-8"> -->
+    <!-- <p-toolbar styleClass="mb-4 gap-2">
         <ng-template pTemplate="left">
             <p-button severity="danger" label="Delete" icon="pi pi-trash" (onClick)="deleteSelectedProducts()"
                 [disabled]="!selectedDevices || !selectedDevices.length" />
@@ -10,13 +10,13 @@
                 class="mr-2 inline-block" />
             <p-button severity="help" label="Export" icon="pi pi-upload" />
         </ng-template>
-    </p-toolbar>
+    </p-toolbar> -->
 
     <app-generic-table [data]="devices" [columns]="columns" [rows]="10" [header]="'Device Details'"
         [globalFilterFields]="['imei']" (edit)="onEditProduct($event)"
         (delete)="onDeleteProduct($event)" (selectionChange)="onSelectionChange($event)"></app-generic-table>
 
-</div>
+<!-- </div> -->
 
 
 <app-generic-dialog [visible]="dealerDialog" [header]="'Device Details'" [width]="'450px'" [modal]="true"
