--- a/src/app/shared/components/generic-dialog/generic-dialog.component.html
+++ b/src/app/shared/components/generic-dialog/generic-dialog.component.html
@@ -7,17 +7,18 @@
                 <div class="flex align-items-center mb-2">
                     <label for="{{ field.name }}" class="mr-2">{{ field.label }}</label>
                     @if(field.validation) {
-                        @if(!validationState[field.name]) {
-                            <i class="pi pi-exclamation-circle text-red-500"></i>
-                        } @else if (validationState[field.name]) {
-                            <i class="pi pi-check-circle text-green-500"></i>
+                            <i style="font-size: 7px;" class="pi pi-star-fill text-red-200 mr-2"></i>
+                        @if(!validationState[field.name] && data[field.name]?.length >= (!field.dependent?.length ? 4 : 1)) {
+                            <i class="pi pi-exclamation-circle text-red-500" [pTooltip]="!field.dependent?.length ? ('Duplicate' + ' ' + field.label) : 'Mismatched Fields'" tooltipPosition="right" ></i>
+                        } @else if (validationState[field.name] && data[field.name]?.length >= (!field.dependent?.length ? 4 : 1)) {
+                            <i class="pi pi-check-circle text-green-500" [pTooltip]="'Looks Good'" tooltipPosition="right"></i>
                         }
                     }
                 </div>
                 @switch (field.type) {
                     @case ('text') {
                         <ng-container>
-                             <input (keyup)="onInputChange($event, field.name)" type="text" pInputText id="{{ field.name }}" [(ngModel)]="data[field.name]" [required]="true" />
+                             <input (keyup)="onInputChange($event, field)" type="text" pInputText id="{{ field.name }}" [(ngModel)]="data[field.name]" [required]="field.validation" />
                         </ng-container>
                     }
                     @case ('textarea') {
@@ -58,7 +59,7 @@
                     }
                     @case ('number') {
                         <ng-container>
-                            <p-inputNumber id="{{ field.name }}" [(ngModel)]="data[field.name]" mode="currency" currency="USD" locale="en-US" />
+                            <p-inputNumber id="{{ field.name }}" [(ngModel)]="data[field.name]" />
                         </ng-container>
                     }
                 }       
